--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,14 @@
         <version>3.0.0</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
     <groupId>com.amigoscode</groupId>
-    <artifactId>spring-boot-example</artifactId>
+    <artifactId>amigoscode-api</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <organization>
+        <name>amigoscode</name>
+        <url>https://amigoscode.com</url>
+    </organization>
     <name>spring-boot-example</name>
     <description>Demo project for Spring Boot</description>
     <url/>
@@ -28,6 +33,8 @@
     </scm>
     <properties>
         <java.version>17</java.version>
+        <maven.compiler.target>17</maven.compiler.target>
+        <docker.username>prista</docker.username>
     </properties>
     <dependencies>
         <dependency>
@@ -157,6 +164,43 @@
                                 <portName>tomcat.http.port</portName>
                             </portNames>
                         </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>3.4.4</version>
+                <configuration>
+                    <from>
+                        <image>eclipse-temurin:17</image>
+                        <platforms>
+                            <!-- for macOS -->
+                            <platform>
+                                <architecture>arm64</architecture>
+                                <os>linux</os>
+                            </platform>
+                            <!-- for Windows -->
+                            <platform>
+                                <architecture>amd64</architecture>
+                                <os>linux</os>
+                            </platform>
+                        </platforms>
+                    </from>
+                    <to>
+                        <!-- image that we're going to create -->
+                        <image>docker.io/${docker.username}/${project.artifactId}:${project.version}</image>
+                        <tags>
+                            <tag>latest</tag>
+                        </tags>
+                    </to>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>build</goal>
+                        </goals>
                     </execution>
                 </executions>
             </plugin>
