--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,21 @@ services:
       - "5432:5432"
     networks:
       - db
+    restart: unless-stopped # ensures that your container will automatically restart if it crashes or if the Docker daemon restarts.
+  amigoscode-api:
+    container_name: amigoscode-api
+    image: prista/amigoscode-api
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/customer
+    ports:
+      - "8088:8080"
+    networks:
+      - db
+    depends_on:
+      - db
     restart: unless-stopped
-
+#    command:
+#      - -spring.datasource.url=jdbc:postgresql://db:5432/customer
 networks:
   db:
     driver: bridge
