--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     services:
       postgres:
-        image: postgres
+        image: postgres:14.5
         env:
           POSTGRES_USER: amigoscode
           POSTGRES_PASSWORD: password
@@ -36,4 +36,4 @@ jobs:
           java-version: '17'
           cache: 'maven'
       - name: Build and run Unit/Integration Tests with Maven
-        run: mvn -ntp -B verify
+        run: mvn -ntp -B verify -Djib.to.auth.password=${{ secrets.DRM_DOCKER_PASSWORD }} -Djib.to.auth.username=${{ secrets.DRM_DOCKER_USER }}
