--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -36,4 +36,4 @@ jobs:
           java-version: '17'
           cache: 'maven'
       - name: Build and run Unit/Integration Tests with Maven
-        run: mvn verify -ntp -B
+        run: mvn jib:build -Djib.to.auth.password=${{ secrets.DRM_DOCKER_PASSWORD }} -Djib.to.auth.username=prista
