cd workflow, setup java, docker login, setting build number, deploy to AWS

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -12,30 +12,18 @@
     <groupId>com.amigoscode</groupId>
     <artifactId>amigoscode-api</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <organization>
-        <name>amigoscode</name>
-        <url>https://amigoscode.com</url>
-    </organization>
+
     <name>spring-boot-example</name>
     <description>Demo project for Spring Boot</description>
-    <url/>
-    <licenses>
-        <license/>
-    </licenses>
-    <developers>
-        <developer/>
-    </developers>
-    <scm>
-        <connection/>
-        <developerConnection/>
-        <tag/>
-        <url/>
-    </scm>
+
     <properties>
         <java.version>17</java.version>
         <maven.compiler.target>17</maven.compiler.target>
         <docker.username>prista</docker.username>
+        <docker.image.name>amigoscode-api</docker.image.name>
+        <docker.image.tag/>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.postgresql</groupId>
@@ -189,7 +177,7 @@
                     </from>
                     <to>
                         <!-- image that we're going to create -->
-                        <image>docker.io/${docker.username}/${project.artifactId}:${project.version}</image>
+                        <image>docker.io/${docker.username}/${docker.image.name}:${docker.image.tag}</image>
                         <tags>
                             <tag>latest</tag>
                         </tags>
