--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -67,10 +67,10 @@ jobs:
 #          version_description: ${{ github.SHA }}
 #          region: ${{ secrets.EB_REGION }}
 #          deployment_package: ba ckend/Dockerrun.aws.json
-#      - name: Commit and push Dockerrun.aws.json
-#        run: |
-#          git config user.name github-actions
-#          git config user.email github-actions@github.com
-#          git add .
-#          git commit -m "Update Dockerrun.aws.json docker image with new tag ${{steps.build-number.outputs.BUILD_NUMBER}}"
-#          git push
+      - name: Commit and push Dockerrun.aws.json
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add .
+          git commit -m "Update Dockerrun.aws.json docker image with new tag ${{steps.build-number.outputs.BUILD_NUMBER}}"
+          git push
